# auto-cae

./: .gitignore  README.md  package.json  pnpm-lock.yaml  start.bat
.claude/: settings.local.json
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py  state.py
apps/api/app/cad/: step_loader.py
apps/api/app/frd/: parser.py
apps/api/app/mesh/: _worker.py  gmsh_runner.py  gmsh_runner1.py  gmsh_runner2.py  gmsh_runner3.py
apps/api/app/routers/: jobs.py  projects.py
apps/api/app/schemas/: geometry.py  jobs.py
apps/api/app/solve/: ccx_runner.py  pipeline.py
apps/api/app/ws/: jobs_ws.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: client.ts
apps/web/src/data/: materials.ts
apps/web/src/panels/: BottomLog.tsx  LeftTree.tsx  ResultLegend.tsx  RightProps.tsx  Toasts.tsx  Toolbar.tsx
apps/web/src/scene/: FaceMesh.tsx  ResultOverlay.tsx  Viewer.tsx
apps/web/src/store/: useProject.ts
apps/web/src/styles/: globals.css
docs/: WORKFLOW.md
scripts/: diag_one.py  diag_pg7.py  diag_pg7_v3.py  diagnose_mesh.py  doctor.py  install-deps.ps1  make_test_step.py  stress_repair.py  test_e2e.py  test_mesh_pipeline.py  test_reset.py  test_stl.py  test_stl2.py
